Fix icon spacing

--- a/src/components/WeatherCarousel/TodaysWeather/TodaysWeather.scss
+++ b/src/components/WeatherCarousel/TodaysWeather/TodaysWeather.scss
@@ -27,8 +27,9 @@
     grid-template-columns: 150px 200px;
     grid-row-gap: 20px;
     text-align: left;
-    grid-column-gap: 40px;
+    grid-column-gap: 80px;
     margin: auto;
+    width:335px;
 }
 
 .react-icons {
